tests/fixtures/invalid/float_floordiv_bytes.py
# Cannot floor divide Float and Bytes
x: float = 1.0 // b"hello"
